# plantamiz

./: .gitignore  CMakeLists.txt  Charger.c  Charger.h  Contrat_plateau.h  Menu.c  Menu.h  README.md  Selection_cordonnées.h  game function.c  game function.h  main.c  nicolas.txt  pion.c  pion.h  plateau.c  plateau.h  sauvegarde.c  sauvegarde.h  utilisateurs.txt
