cmake_minimum_required(VERSION 3.29)
project(plantamiz C)

set(CMAKE_C_STANDARD 11)

add_executable(plantamiz main.c
        plateau.c
        plateau.h
        pion.c
        pion.h
        Menu.h
        Menu.c
        plateau.c
        plateau.c
        Selection_cordonnées.h
        Selection_cordonnées.h
        Contrat_plateau.h
        main.c
)
